WebCore/storage/StorageArea.h
@@ -48,7 +48,7 @@ namespace WebCore {
 
         // The HTML5 DOM Storage API
         virtual unsigned length() const = 0;
-        virtual String key(unsigned index, ExceptionCode& ec) const = 0;
+        virtual String key(unsigned index) const = 0;
         virtual String getItem(const String& key) const = 0;
         virtual void setItem(const String& key, const String& value, ExceptionCode& ec, Frame* sourceFrame) = 0;
         virtual void removeItem(const String& key, Frame* sourceFrame) = 0;
