WebCore/storage/StorageMap.cpp
@@ -82,15 +82,13 @@ unsigned StorageMap::length() const
     return m_map.size();
 }
 
-bool StorageMap::key(unsigned index, String& key) const
+String StorageMap::key(unsigned index) const
 {
     if (index >= length())
-        return false;
+        return String();
     
     setIteratorToIndex(index);
-    
-    key = m_iterator->first;
-    return true;
+    return m_iterator->first;
 }
 
 String StorageMap::getItem(const String& key) const
